--- a/src/components/pages/searchResultsLayout/searchResults.scss
+++ b/src/components/pages/searchResultsLayout/searchResults.scss
@@ -1,4 +1,5 @@
 .search-results {
+  min-height: 100vh;
   width: 100%;
   display: grid;
   grid-template-columns: 3fr 1fr;
